<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:scrollbarAlwaysDrawVerticalTrack="true" >

        <EditText
            android:id="@+id/et_eventname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/eventname" />

        <Spinner
            android:id="@+id/spinner_dept"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <EditText
            android:id="@+id/dp_startdate"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:editable="false"
            android:hint="@string/startdate" />

        <EditText
            android:id="@+id/dp_enddate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:editable="false"
            android:hint="@string/enddate" />

        <EditText
            android:id="@+id/et_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/description" >
        </EditText>

        <EditText
            android:id="@+id/et_venue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/venue" >
        </EditText>

        <Button
            android:id="@+id/timePicker1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:text="Select Timings" />

        <LinearLayout
            android:id="@+id/layout_create"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/bt_create"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/create_event" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>