<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff" >

        <!-- Header Starts -->

        <LinearLayout
            android:id="@+id/header"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@layout/header_gradient"
            android:paddingBottom="5dip"
            android:paddingTop="5dip" >

            <!-- Logo Start -->

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:layout_marginStart="10dip"
                android:contentDescription="@string/desc"
                android:src="@drawable/logo_login" />

            <!-- Logo Ends -->
        </LinearLayout>
        <!-- Header Ends -->


        <!-- Footer Start -->

        <LinearLayout
            android:id="@+id/footer"
            android:layout_width="fill_parent"
            android:layout_height="90dip"
            android:layout_alignParentBottom="true"
            android:background="@layout/footer_repeat"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/cmrit_goes_android"
                android:textColor="#0b84aa"
                android:textSize="20sp" />
        </LinearLayout>
        <!-- Footer Ends -->


        <!-- Login Form -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/header"
            android:orientation="vertical"
            android:padding="10dip" >

            <!-- Username Label -->

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:textColor="#372c24" />

            <EditText
                android:id="@+id/username"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dip"
                android:layout_marginTop="5dip"
                android:hint="@string/username"
                android:inputType="text"
                android:singleLine="true"
                />

            <!-- Password Label -->

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textColor="#372c24" />

            <EditText
                android:id="@+id/password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:singleLine="true"
                 />

            <!-- Login button -->

            <RadioGroup
                android:id="@+id/grp_role"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <RadioButton
                    android:id="@+id/rb_student"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                   
                    android:text="@string/student" />

                <RadioButton
                    android:id="@+id/rb_staff"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/staff" />

                <RadioButton
                    android:id="@+id/rb_admin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/admin" 
                     android:checked="true"/>
            </RadioGroup>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="20dp"
                android:gravity="center_horizontal"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#24B2EB"
                    android:text="@string/login" />

                <Button
                    android:id="@+id/btn_reset"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#24B2EB"
                    android:text="@string/reset" 
                    android:layout_marginTop="10dp"/>
            </LinearLayout>

            <!-- Link to Registration Screen -->

        </LinearLayout>
        <!-- Login Form Ends -->

    </RelativeLayout>

</ScrollView>