<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:scrollbarAlwaysDrawVerticalTrack="true" >

    <RelativeLayout
        android:id="@+id/rl_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:gravity="center" >

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TableRow
                android:id="@+id/tr_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical" >
                </LinearLayout>
            </TableRow>

            <TableRow
                android:id="@+id/tr_firstname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/tv_firstname"
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/firstname" />

                <EditText
                    android:id="@+id/et_firstname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:ems="10"
                    android:hint="@string/firstname"
                    />
            </TableRow>

            <TableRow
                android:id="@+id/tr_lastname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/tv_lastname"
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:text="@string/lastname" />

                <EditText
                    android:id="@+id/et_lastname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/lastname"
                    />
            </TableRow>

            <TableRow
                android:id="@+id/tr_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/tv_email"
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:text="@string/username" />

                <EditText
                    android:id="@+id/et_username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                     />
            </TableRow>

            <TableRow
                android:id="@+id/tr_mobile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/tv_mobile"
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:text="@string/mobile" />

                <EditText
                    android:id="@+id/et_mobile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/mobile"
                     >
                </EditText>
            </TableRow>

            <TableRow
                android:id="@+id/tr_role"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/tv_DEPT"
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:text="@string/department" />

                <Spinner
                    android:id="@+id/spinner_dept"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </TableRow>

            <TableRow
                android:id="@+id/tr_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/tv_sem"
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:text="@string/title" />

               <Spinner
                    android:id="@+id/spinner_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                
            </TableRow>
        </TableLayout>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/layout_submit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/bt_submit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_staff" />
    </LinearLayout>

</LinearLayout>